--- a/app/src/main/res/layout/layout_mydog.xml
+++ b/app/src/main/res/layout/layout_mydog.xml
@@ -26,7 +26,7 @@
         <ListView
             android:layout_width="368dp"
             android:layout_height="468dp"
-            android:id="@+id/listView1"
+            android:id="@+id/dogListView"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="16dp"
