--- a/app/src/main/res/layout/content_dog_add_info.xml
+++ b/app/src/main/res/layout/content_dog_add_info.xml
@@ -52,13 +52,12 @@
             android:layout_height="73dp"
             app:srcCompat="@drawable/arrowpicleft"
             android:id="@+id/imageButton8"
+            android:layout_marginTop="48dp"
+            app:layout_constraintTop_toTopOf="parent"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="16dp"
-            app:layout_constraintRight_toLeftOf="@+id/imageView2"
-            app:layout_constraintHorizontal_bias="1.0"
-            android:layout_marginTop="48dp"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintRight_toLeftOf="@+id/imageView2" />
 
         <EditText
             android:layout_width="wrap_content"
@@ -66,70 +65,69 @@
             android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/nameText"
-            android:text="name"
             android:textAlignment="center"
-            app:layout_constraintTop_toBottomOf="@+id/imageView2"
+            android:hint="Dog's name"
+            android:background="@color/com_facebook_button_background_color_selected"
+            android:padding="10dp"
+            android:textSize="24sp"
+            android:textStyle="normal|bold"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="16dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
         <TextView
-            android:layout_width="186dp"
-            android:layout_height="48dp"
+            android:layout_width="142dp"
+            android:layout_height="70dp"
             android:ems="10"
             android:id="@+id/breedText"
             android:textAlignment="center"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/nameText"
+            android:textSize="18sp"
             app:layout_constraintLeft_toLeftOf="@+id/nameText"
-            app:layout_constraintHorizontal_bias="0.0" />
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/nameText" />
 
         <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="142dp"
+            android:layout_height="120dp"
             android:inputType="textPersonName"
-            android:text="Noticeable"
             android:ems="10"
             android:id="@+id/noticeText"
             android:textAlignment="center"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/breedText" />
+            android:hint="Write here..."
+            android:textSize="12sp"
+            android:gravity="top|left"
+            android:background="@color/com_facebook_button_background_color_focused"
+            app:layout_constraintLeft_toLeftOf="@+id/textView4"
+            app:layout_constraintRight_toRightOf="@+id/textView4"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView4"
+            app:layout_constraintHorizontal_bias="0.0" />
 
         <ImageButton
-            android:layout_width="42dp"
-            android:layout_height="43dp"
-            app:srcCompat="@android:drawable/ic_menu_search"
+            android:layout_width="134dp"
+            android:layout_height="70dp"
+            app:srcCompat="@drawable/ic_search36dp"
             android:id="@+id/imageButton9"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginStart="8dp"
-            app:layout_constraintLeft_toRightOf="@+id/breedText"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintTop_toTopOf="@+id/breedText"
-            android:background="@drawable/oval"
             android:onClick="searchClicked"
-            app:layout_constraintHorizontal_bias="0.2" />
+            app:layout_constraintRight_toRightOf="@+id/nameText"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/nameText" />
 
         <ImageView
-            android:layout_width="336dp"
-            app:srcCompat="@drawable/location"
-            tools:layout_editor_absoluteX="8dp"
+            android:layout_width="134dp"
+            app:srcCompat="@drawable/mapbutton"
             android:id="@+id/AddLoc"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:background="@color/cast_expanded_controller_seek_bar_progress_background_tint_color"
-            android:layout_marginBottom="8dp"
-            android:layout_height="100dp"
+            android:background="@color/cast_expanded_controller_ad_label_background_color"
+            android:layout_height="120dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/noticeText" />
+            app:layout_constraintTop_toBottomOf="@+id/textView5"
+            app:layout_constraintRight_toRightOf="@+id/textView5"
+            app:layout_constraintLeft_toLeftOf="@+id/textView5"
+            app:layout_constraintHorizontal_bias="0.0" />
 
         <Button
             android:text="Next"
@@ -139,12 +137,42 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:background="@color/colorPrimary"
             android:onClick="nextClicked"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginBottom="16dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="16dp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp" />
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/noticeText" />
+
+        <TextView
+            android:text="Noticeable"
+            android:layout_width="140dp"
+            android:layout_height="36dp"
+            android:id="@+id/textView4"
+            android:background="@color/com_facebook_button_background_color_focused_disabled"
+            android:padding="8dp"
+            android:gravity="center_vertical|center_horizontal"
+            app:layout_constraintLeft_toLeftOf="@+id/breedText"
+            app:layout_constraintRight_toRightOf="@+id/breedText"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/breedText" />
+        <TextView
+            android:text="Location"
+            android:layout_width="134dp"
+            android:layout_height="36dp"
+            android:id="@+id/textView5"
+            android:textSize="12sp"
+            android:background="@color/com_facebook_button_background_color_focused_disabled"
+            android:textColor="@color/cardview_light_background"
+            android:padding="8dp"
+            app:layout_constraintRight_toRightOf="@+id/imageButton9"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageButton9"
+            app:layout_constraintLeft_toLeftOf="@+id/imageButton9"
+            android:gravity="center_vertical|center_horizontal" />
 
     </android.support.constraint.ConstraintLayout>
 </RelativeLayout>
