--- a/app/src/main/res/layout/content_my_dog_detail.xml
+++ b/app/src/main/res/layout/content_my_dog_detail.xml
@@ -62,23 +62,26 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/nameText2"
-            android:text="Tony"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageMyDog"
             android:textAlignment="center"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageMyDog"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="16dp"
-            android:textSize="20sp"
-            android:background="@color/com_facebook_button_background_color_selected"
-            android:padding="5dp" />
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            android:text="Tony"
+            android:background="@color/com_facebook_button_background_color_pressed"
+            android:padding="10dp"
+            android:textSize="24sp"
+            app:layout_constraintHorizontal_bias="0.56"
+            android:textStyle="normal|bold"
+            android:textColor="@color/cast_expanded_controller_text_color" />
 
         <TextView
             android:layout_width="0dp"
@@ -87,16 +90,39 @@
             android:id="@+id/breedText2"
             android:text="Golden"
             android:textAlignment="center"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
             app:layout_constraintTop_toBottomOf="@+id/nameText2"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
+            app:layout_constraintLeft_toLeftOf="@+id/nameText2"
             android:padding="5dp"
             android:background="@color/com_facebook_button_background_color_disabled"
-            android:layout_marginTop="2dp" />
+            android:layout_marginTop="2dp"
+            app:layout_constraintRight_toRightOf="@+id/nameText2" />
+
+        <TextView
+            android:text="Noticeable"
+            android:layout_height="36dp"
+            android:id="@+id/textView4"
+            android:background="@color/com_facebook_button_background_color_focused_disabled"
+            android:padding="8dp"
+            app:layout_constraintHorizontal_bias="1.0"
+            android:gravity="center_vertical|center_horizontal"
+            android:layout_width="138dp"
+            app:layout_constraintLeft_toLeftOf="@+id/nameText2"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/breedText2" />
+
+        <TextView
+            android:text="Location"
+            android:layout_height="36dp"
+            android:id="@+id/textView5"
+            android:textSize="12sp"
+            android:background="@color/com_facebook_button_background_color_focused_disabled"
+            android:textColor="@color/cardview_light_background"
+            android:padding="8dp"
+            android:gravity="center_vertical|center_horizontal"
+            android:layout_width="138dp"
+            app:layout_constraintRight_toRightOf="@+id/nameText2"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/breedText2" />
 
         <FrameLayout
             android:id="@+id/mapContainer"
@@ -105,6 +131,31 @@
             tools:layout_editor_absoluteX="8dp"
             app:layout_constraintTop_toBottomOf="@+id/breedText2"/>
 
+        <TextView
+            android:layout_width="138dp"
+            android:layout_height="124dp"
+            android:ems="10"
+            android:id="@+id/noticeText"
+            android:textAlignment="center"
+            android:textSize="12sp"
+            android:background="@color/com_facebook_button_background_color_focused"
+            app:layout_constraintLeft_toLeftOf="@+id/textView4"
+            app:layout_constraintRight_toRightOf="@+id/textView4"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView4"
+            app:layout_constraintHorizontal_bias="0.0" />
+
+        <ImageView
+            android:layout_width="138dp"
+            app:srcCompat="@drawable/mapbutton"
+            android:id="@+id/ShowLoc"
+            android:background="@color/cast_expanded_controller_ad_label_background_color"
+            android:layout_height="124dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView5"
+            app:layout_constraintRight_toRightOf="@+id/textView5"
+            app:layout_constraintLeft_toLeftOf="@+id/textView5"
+            app:layout_constraintHorizontal_bias="0.0" />
 
     </android.support.constraint.ConstraintLayout>
 
