--- a/app/src/main/res/layout/layout_found.xml
+++ b/app/src/main/res/layout/layout_found.xml
@@ -8,7 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true">
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <ImageButton
             android:layout_width="65dp"
@@ -27,18 +28,16 @@
 
         <ListView
             android:layout_width="368dp"
-            android:layout_height="468dp"
+            android:layout_height="511dp"
             android:id="@+id/foundListView"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
-            android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp"
-            android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
-            app:layout_constraintVertical_bias="0.0" />
+            android:theme="@style/WalletFragmentDefaultStyle"
+            android:padding="4dp"
+            app:layout_constraintVertical_bias="0.49"
+            app:layout_constraintHorizontal_bias="0.52" />
 
     </android.support.constraint.ConstraintLayout>
 </RelativeLayout>
