--- a/app/src/main/res/layout/list_item_found.xml
+++ b/app/src/main/res/layout/list_item_found.xml
@@ -15,15 +15,12 @@
 
         <ImageView
             android:id="@+id/foundUserPicPost"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="58dp"
+            android:layout_height="56dp"
             android:layout_alignParentTop="true"
-            android:src="@drawable/crop_square_36"
-            android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:src="@drawable/com_facebook_profile_picture_blank_square"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent" />
 
         <TextView
             android:id="@+id/nameFB"
@@ -35,7 +32,7 @@
             android:layout_marginStart="10dp"
             app:layout_constraintLeft_toRightOf="@+id/foundUserPicPost"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="16dp" />
+            android:layout_marginTop="10dp" />
 
         <TextView
             android:id="@+id/foundDatePost"
@@ -53,23 +50,22 @@
             android:layout_height="wrap_content"
             android:textSize="12sp"
             app:layout_constraintLeft_toLeftOf="@+id/foundUserPicPost"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/foundUserPicPost"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp" />
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/foundUserPicPost" />
 
         <ImageView
             android:id="@+id/picFoundPost"
-            android:layout_width="327dp"
+            android:layout_width="351dp"
             android:layout_height="200dp"
             app:srcCompat="@color/wallet_bright_foreground_disabled_holo_light"
-            app:layout_constraintLeft_toLeftOf="@+id/noticeFoundPost"
             app:layout_constraintTop_toBottomOf="@+id/noticeFoundPost"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="16dp"
-            android:background="@color/cast_intro_overlay_button_background_color" />
+            android:background="@color/cast_intro_overlay_button_background_color"
+            app:layout_constraintLeft_toLeftOf="@+id/breedFoundPost"
+            app:layout_constraintHorizontal_bias="0.0" />
 
         <TextView
             android:id="@+id/breedFoundPost"
@@ -89,14 +85,6 @@
             app:layout_constraintTop_toBottomOf="@+id/breedFoundPost"
             android:textSize="12sp" />
 
-        <ImageButton
-            android:id="@+id/leftChangeLost"
-            android:layout_width="47dp"
-            android:layout_height="69dp"
-            app:srcCompat="@drawable/arrowpic"
-            app:layout_constraintRight_toRightOf="@+id/picFoundPost"
-            app:layout_constraintTop_toTopOf="@+id/picFoundPost"
-            app:layout_constraintBottom_toBottomOf="@+id/picFoundPost" />
     </android.support.constraint.ConstraintLayout>
 
 </RelativeLayout>
