--- a/app/src/main/res/layout/layout_map.xml
+++ b/app/src/main/res/layout/layout_map.xml
@@ -7,7 +7,6 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/textView3"
         android:layout_centerHorizontal="true">
 
         <TextView
@@ -15,16 +14,41 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:id="@+id/textView3" />
+            android:id="@+id/textView3"
+            tools:layout_editor_absoluteY="0dp"
+            tools:layout_editor_absoluteX="0dp" />
 
         <Button
-            android:text="Map"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:layout_editor_absoluteY="261dp"
-            tools:layout_editor_absoluteX="103dp"
+            android:text="My Dog's location"
+            android:layout_width="360dp"
+            android:layout_height="143dp"
             android:id="@+id/button2"
-            android:onClick="GotoMapClicked" />
+            android:onClick="GotoMapClicked"
+            android:textSize="18sp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp" />
+
+        <Button
+            android:text="Founder's location"
+            android:layout_width="360dp"
+            android:layout_height="143dp"
+            android:id="@+id/button3"
+            android:onClick="GotoMapClicked"
+            android:textSize="18sp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/button2"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp" />
     </android.support.constraint.ConstraintLayout>
 
 </RelativeLayout>
