--- a/app/src/main/res/layout/list_item_find.xml
+++ b/app/src/main/res/layout/list_item_find.xml
@@ -28,7 +28,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/alert24p"
+        app:srcCompat="@drawable/alertoff"
         android:layout_alignTop="@+id/imgDogFind"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
