--- a/app/src/main/res/layout/list_item_lost.xml
+++ b/app/src/main/res/layout/list_item_lost.xml
@@ -20,10 +20,7 @@
             android:layout_alignParentTop="true"
             android:src="@drawable/crop_square_36"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/nameFB"
