--- a/app/src/main/res/layout/content_dog_add_info.xml
+++ b/app/src/main/res/layout/content_dog_add_info.xml
@@ -24,7 +24,7 @@
             android:layout_width="185dp"
             android:layout_height="148dp"
             app:srcCompat="@drawable/camera2"
-            android:id="@+id/imageView2"
+            android:id="@+id/captureView"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginEnd="16dp"
@@ -42,7 +42,6 @@
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="16dp"
-            app:layout_constraintLeft_toRightOf="@+id/imageView2"
             android:layout_marginTop="48dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintHorizontal_bias="0.0" />
@@ -56,8 +55,7 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp"
-            app:layout_constraintRight_toLeftOf="@+id/imageView2" />
+            android:layout_marginLeft="16dp" />
 
         <EditText
             android:layout_width="wrap_content"
@@ -77,7 +75,9 @@
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+            app:layout_constraintHorizontal_bias="0.61"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/captureButton" />
 
         <TextView
             android:layout_width="142dp"
@@ -173,6 +173,19 @@
             app:layout_constraintTop_toBottomOf="@+id/imageButton9"
             app:layout_constraintLeft_toLeftOf="@+id/imageButton9"
             android:gravity="center_vertical|center_horizontal" />
+
+        <Button
+            android:text="ADD"
+            android:layout_width="188dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/captureButton"
+            app:layout_constraintTop_toBottomOf="@+id/captureView"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp" />
 
     </android.support.constraint.ConstraintLayout>
 </RelativeLayout>
