--- a/app/src/main/res/layout/content_found_post.xml
+++ b/app/src/main/res/layout/content_found_post.xml
@@ -13,4 +13,145 @@
     tools:context="com.siriporn.dogfindertest.FoundPostActivity"
     tools:showIn="@layout/activity_found_post">
 
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <ImageView
+            android:id="@+id/foundUserPicWritePost"
+            android:layout_width="74dp"
+            android:layout_height="70dp"
+            android:layout_alignParentTop="true"
+            android:src="@drawable/com_facebook_profile_picture_blank_square"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="8dp" />
+
+        <TextView
+            android:id="@+id/nameFB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Name"
+            android:textSize="24sp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintLeft_toRightOf="@+id/foundUserPicWritePost"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:text= "Add dog's photo"
+            android:layout_width="304dp"
+            android:layout_height="25dp"
+            android:textSize="18sp"
+            app:layout_constraintTop_toBottomOf="@+id/noticeFoundPost"
+            android:layout_marginTop="16dp"
+            android:id="@+id/textView7"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            android:textAlignment="center"
+            android:textColor="@color/cardview_light_background"
+            android:background="@color/colorAccent" />
+        <ImageView
+            android:layout_width="303dp"
+            android:layout_height="131dp"
+            app:srcCompat="@drawable/camera2"
+            android:id="@+id/picFoundPost"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView7"
+            android:layout_marginTop="8dp" />
+
+        <ImageButton
+            android:layout_width="64dp"
+            android:layout_height="73dp"
+            app:srcCompat="@drawable/arrowpic"
+            android:id="@+id/imageButton7"
+            app:layout_constraintTop_toTopOf="@+id/picFoundPost"
+            android:layout_marginTop="32dp"
+            app:layout_constraintRight_toRightOf="@+id/picFoundPost" />
+
+        <ImageButton
+            android:layout_width="64dp"
+            android:layout_height="73dp"
+            app:srcCompat="@drawable/arrowpicleft"
+            android:id="@+id/imageButton8"
+            app:layout_constraintTop_toTopOf="@+id/picFoundPost"
+            android:layout_marginTop="32dp"
+            app:layout_constraintLeft_toLeftOf="@+id/picFoundPost" />
+
+        <TextView
+            android:text= "Breed : "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:id="@+id/textView6"
+            app:layout_constraintTop_toBottomOf="@+id/picFoundPost"
+            android:layout_marginTop="24dp"
+            app:layout_constraintLeft_toLeftOf="@+id/imageButton8" />
+        <TextView
+            android:id="@+id/breedFoundWritePost"
+            android:layout_width="198dp"
+            android:layout_height="47dp"
+            android:ems="10"
+            android:textAlignment="center"
+            android:textSize="18sp"
+            app:layout_constraintLeft_toRightOf="@+id/textView6"
+            app:layout_constraintTop_toTopOf="@+id/textView6"
+            android:background="@color/com_facebook_button_background_color_disabled" />
+        <ImageButton
+            android:layout_width="49dp"
+            android:layout_height="47dp"
+            app:srcCompat="@drawable/places_ic_search"
+            android:background="@drawable/oval"
+            android:elevation="10dp"
+            android:id="@+id/imageButton9"
+            android:onClick="searchClicked"
+            app:layout_constraintLeft_toRightOf="@+id/breedFoundWritePost"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            app:layout_constraintTop_toTopOf="@+id/breedFoundWritePost"
+            app:layout_constraintHorizontal_bias="0.25" />
+
+        <EditText
+            android:id="@+id/noticeFoundPost"
+            android:hint="Write your post..."
+            android:layout_width="355dp"
+            android:layout_height="146dp"
+            android:textSize="18sp"
+            android:gravity="top|left"
+            tools:layout_editor_absoluteY="86dp"
+            tools:layout_editor_absoluteX="8dp" />
+
+        <Button
+            android:text="POST"
+            android:layout_width="311dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/writeFoundPostBtn"
+            android:onClick="writeFoundPostClicked"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            android:background="@android:color/holo_blue_dark"
+            android:layout_marginTop="48dp"
+            app:layout_constraintTop_toBottomOf="@+id/breedFoundWritePost" />
+
+    </android.support.constraint.ConstraintLayout>
+
 </RelativeLayout>
