--- a/app/src/main/res/layout/layout_found.xml
+++ b/app/src/main/res/layout/layout_found.xml
@@ -18,7 +18,7 @@
             android:background="@drawable/oval"
             android:elevation="10dp"
             android:layout_alignParentBottom="true"
-            android:onClick="AddMyDogClicked"
+            android:onClick="AddFoundPostClicked"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="16dp"
