--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,17 +7,19 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
+        android:layout_width="250dp"
+        android:layout_height="72dp"
         android:id="@+id/text_details"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/login_button"
-        android:layout_marginEnd="32dp"
+        android:textSize="35sp"
+        android:textAlignment="center"
+        android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="32dp"
+        android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
-        app:layout_constraintHorizontal_bias="0.0" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/login_button"
@@ -54,8 +56,8 @@
 
     <TextView
         android:text="Welcome to DogFinder"
-        android:layout_width="288dp"
-        android:layout_height="111dp"
+        android:layout_width="249dp"
+        android:layout_height="104dp"
         android:id="@+id/textView2"
         android:textSize="35sp"
         android:textAlignment="center"
@@ -66,11 +68,10 @@
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintHorizontal_bias="0.52" />
+        android:layout_marginTop="8dp" />
 
     <Button
-        android:text="LogIn"
+        android:text="LET'S GO !"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/temLogin"
@@ -81,7 +82,8 @@
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp" />
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp" />
 
 </android.support.constraint.ConstraintLayout>
 
