--- a/app/src/main/res/layout/content_search_breed.xml
+++ b/app/src/main/res/layout/content_search_breed.xml
@@ -25,8 +25,10 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="match_parent"
+        android:background="@color/cast_expanded_controller_ad_container_white_stripe_color"
+        android:scrollbarSize="14dp">
+        <!--
         <Button
             android:text="Done"
             android:layout_width="328dp"
@@ -42,7 +44,8 @@
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="16dp" />
-
+        </detail>
+        -->
     </android.support.constraint.ConstraintLayout>
 
 </RelativeLayout>
