--- a/app/src/main/res/layout/content_my_dog_detail.xml
+++ b/app/src/main/res/layout/content_my_dog_detail.xml
@@ -46,20 +46,23 @@
             app:layout_constraintLeft_toRightOf="@+id/imageMyDog"
             android:layout_marginTop="48dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_bias="0.0" />
+            android:onClick="BtnRightClicked"
+            android:background="@android:color/transparent" />
 
         <ImageButton
             android:layout_width="64dp"
             android:layout_height="73dp"
             app:srcCompat="@drawable/arrowpicleft"
-            android:id="@+id/imageButtonLeft"
+            android:id="@+id/ButtonLeft"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="16dp"
             app:layout_constraintRight_toLeftOf="@+id/imageMyDog"
             app:layout_constraintHorizontal_bias="1.0"
             android:layout_marginTop="48dp"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:onClick="BtnLeftClicked"
+            android:background="@android:color/transparent" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -80,7 +83,8 @@
             android:textSize="24sp"
             app:layout_constraintHorizontal_bias="0.56"
             android:textStyle="normal|bold"
-            android:textColor="@color/cast_expanded_controller_text_color" />
+            android:textColor="@color/cast_expanded_controller_text_color"
+            android:layout_marginTop="20dp" />
 
         <TextView
             android:layout_width="0dp"
