--- a/app/src/main/res/layout/content_dog_add_info.xml
+++ b/app/src/main/res/layout/content_dog_add_info.xml
@@ -100,11 +100,11 @@
             android:textSize="12sp"
             android:gravity="top|left"
             android:background="@color/com_facebook_button_background_color_focused"
-            app:layout_constraintLeft_toLeftOf="@+id/textView4"
-            app:layout_constraintRight_toRightOf="@+id/textView4"
+            app:layout_constraintLeft_toLeftOf="@+id/FBUser"
+            app:layout_constraintRight_toRightOf="@+id/FBUser"
             app:layout_constraintHorizontal_bias="0.0"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+            app:layout_constraintTop_toBottomOf="@+id/FBUser" />
 
         <ImageButton
             android:layout_width="134dp"
@@ -178,7 +178,7 @@
             android:text="Noticeable"
             android:layout_width="140dp"
             android:layout_height="36dp"
-            android:id="@+id/textView4"
+            android:id="@+id/FBUser"
             android:background="@color/com_facebook_button_background_color_focused_disabled"
             android:padding="8dp"
             android:gravity="center_vertical|center_horizontal"
