--- a/app/src/main/res/layout/content_user_detail.xml
+++ b/app/src/main/res/layout/content_user_detail.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_my_dog_detail"
+    android:id="@+id/content_user_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -11,7 +11,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.siriporn.dogfindertest.MyDogDetail"
-    tools:showIn="@layout/activity_my_dog_detail">
+    tools:showIn="@layout/activity_user_detail">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -34,35 +34,6 @@
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="16dp"
             app:layout_constraintHorizontal_bias="0.52" />
-
-        <ImageButton
-            android:layout_width="64dp"
-            android:layout_height="73dp"
-            app:srcCompat="@drawable/arrowpic"
-            android:id="@+id/ButtonRight"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
-            app:layout_constraintLeft_toRightOf="@+id/imageUser"
-            android:layout_marginTop="48dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:onClick="BtnRightClicked"
-            android:background="@android:color/transparent" />
-
-        <ImageButton
-            android:layout_width="64dp"
-            android:layout_height="73dp"
-            app:srcCompat="@drawable/arrowpicleft"
-            android:id="@+id/ButtonLeft"
-            android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp"
-            app:layout_constraintRight_toLeftOf="@+id/imageUser"
-            app:layout_constraintHorizontal_bias="1.0"
-            android:layout_marginTop="48dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:onClick="BtnLeftClicked"
-            android:background="@android:color/transparent" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -87,8 +58,8 @@
             android:layout_marginTop="20dp" />
 
         <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="280dp"
+            android:layout_height="37dp"
             android:ems="10"
             android:id="@+id/emailUser"
             android:textAlignment="center"
@@ -97,34 +68,24 @@
             android:padding="5dp"
             android:background="@color/com_facebook_button_background_color_disabled"
             android:layout_marginTop="2dp"
-            app:layout_constraintRight_toRightOf="@+id/nameUser" />
+            app:layout_constraintRight_toRightOf="@+id/nameUser"
+            android:textSize="16sp" />
 
         <TextView
-            android:text="Noticeable"
-            android:layout_height="36dp"
+            android:text="Facebook"
+            android:layout_height="52dp"
             android:id="@+id/FBUser"
-            android:background="@color/com_facebook_button_background_color_focused_disabled"
+            android:background="@color/com_facebook_button_background_color"
             android:padding="8dp"
             app:layout_constraintHorizontal_bias="1.0"
             android:gravity="center_vertical|center_horizontal"
-            android:layout_width="138dp"
+            android:layout_width="183dp"
             app:layout_constraintLeft_toLeftOf="@+id/nameUser"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/emailUser" />
-
-        <TextView
-            android:text="Location"
-            android:layout_height="36dp"
-            android:id="@+id/textView5"
-            android:textSize="12sp"
-            android:background="@color/com_facebook_button_background_color_focused_disabled"
+            app:layout_constraintTop_toBottomOf="@+id/emailUser"
+            android:autoText="false"
             android:textColor="@color/cardview_light_background"
-            android:padding="8dp"
-            android:gravity="center_vertical|center_horizontal"
-            android:layout_width="138dp"
-            app:layout_constraintRight_toRightOf="@+id/nameUser"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/emailUser" />
+            android:textSize="18sp" />
 
         <FrameLayout
             android:id="@+id/mapContainer"
@@ -133,31 +94,17 @@
             tools:layout_editor_absoluteX="8dp"
             app:layout_constraintTop_toBottomOf="@+id/emailUser"/>
 
-        <TextView
-            android:layout_width="138dp"
-            android:layout_height="124dp"
-            android:ems="10"
-            android:id="@+id/noticeText"
-            android:textAlignment="center"
-            android:textSize="12sp"
-            android:background="@color/com_facebook_button_background_color_focused"
-            app:layout_constraintLeft_toLeftOf="@+id/FBUser"
-            app:layout_constraintRight_toRightOf="@+id/FBUser"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/FBUser"
-            app:layout_constraintHorizontal_bias="0.0" />
-
         <ImageView
-            android:layout_width="138dp"
+            android:layout_width="53dp"
             app:srcCompat="@drawable/mapbutton"
-            android:id="@+id/ShowLoc"
+            android:id="@+id/locUser"
             android:background="@color/cast_expanded_controller_ad_label_background_color"
-            android:layout_height="124dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView5"
-            app:layout_constraintRight_toRightOf="@+id/textView5"
-            app:layout_constraintLeft_toLeftOf="@+id/textView5"
-            app:layout_constraintHorizontal_bias="0.0" />
+            android:layout_height="48dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintLeft_toRightOf="@+id/FBUser"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintTop_toTopOf="@+id/FBUser"
+            app:layout_constraintBottom_toBottomOf="@+id/FBUser" />
 
     </android.support.constraint.ConstraintLayout>
 
