--- a/app/src/main/res/layout/content_dog_add_info.xml
+++ b/app/src/main/res/layout/content_dog_add_info.xml
@@ -25,35 +25,13 @@
             android:layout_height="148dp"
             app:srcCompat="@drawable/camera2"
             android:id="@+id/captureView"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="@+id/imageButton7"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp" />
-
-        <ImageButton
-            android:layout_width="64dp"
-            android:layout_height="73dp"
-            app:srcCompat="@drawable/arrowpic"
-            android:id="@+id/imageButton7"
+            android:layout_marginLeft="16dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="16dp"
-            android:layout_marginTop="48dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_bias="0.0" />
-
-        <ImageButton
-            android:layout_width="64dp"
-            android:layout_height="73dp"
-            app:srcCompat="@drawable/arrowpicleft"
-            android:id="@+id/imageButton8"
-            android:layout_marginTop="48dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:layout_width="wrap_content"
@@ -78,26 +56,26 @@
             app:layout_constraintTop_toBottomOf="@+id/captureButton" />
 
         <TextView
-            android:layout_width="149dp"
-            android:layout_height="37dp"
+            android:layout_width="183dp"
+            android:layout_height="30dp"
             android:ems="10"
             android:textAlignment="center"
             android:textSize="18sp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/nameText"
-            app:layout_constraintRight_toLeftOf="@+id/imageButton9"
-            app:layout_constraintLeft_toLeftOf="@+id/nameText"
-            android:id="@+id/breedText" />
+            app:layout_constraintRight_toLeftOf="@+id/searchBreed"
+            android:id="@+id/breedText"
+            app:layout_constraintLeft_toLeftOf="@+id/nameText" />
 
         <EditText
-            android:layout_width="142dp"
+            android:layout_width="170dp"
             android:layout_height="120dp"
             android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/noticeText"
             android:textAlignment="center"
             android:hint="Write here..."
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:gravity="top|left"
             android:background="@color/com_facebook_button_background_color_focused"
             app:layout_constraintLeft_toLeftOf="@+id/FBUser"
@@ -107,59 +85,54 @@
             app:layout_constraintTop_toBottomOf="@+id/FBUser" />
 
         <ImageButton
-            android:layout_width="134dp"
+            android:layout_width="102dp"
             android:layout_height="70dp"
             app:srcCompat="@drawable/ic_search36dp"
-            android:id="@+id/imageButton9"
+            android:id="@+id/searchBreed"
             android:onClick="searchClicked"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/nameText"
             app:layout_constraintRight_toRightOf="@+id/nameText" />
 
         <ImageView
-            android:layout_width="134dp"
+            android:layout_width="104dp"
             app:srcCompat="@drawable/mapbutton"
             android:id="@+id/AddLoc"
             android:background="@color/cast_expanded_controller_ad_label_background_color"
             android:layout_height="120dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/textView5"
-            app:layout_constraintRight_toRightOf="@+id/textView5"
-            app:layout_constraintLeft_toLeftOf="@+id/textView5"
-            app:layout_constraintHorizontal_bias="0.0" />
+            app:layout_constraintRight_toRightOf="@+id/textView5" />
 
         <Button
             android:text="Next"
-            android:layout_width="255dp"
-            android:layout_height="wrap_content"
+            android:layout_width="291dp"
+            android:layout_height="48dp"
             android:id="@+id/acceptdog"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:background="@color/colorPrimary"
             android:onClick="nextClicked"
-            android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp"
-            android:layout_marginBottom="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/noticeText"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="16dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/noticeText" />
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp" />
 
         <TextView
             android:text="Location"
-            android:layout_width="134dp"
-            android:layout_height="36dp"
+            android:layout_width="102dp"
+            android:layout_height="32dp"
             android:id="@+id/textView5"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:background="@color/com_facebook_button_background_color_focused_disabled"
             android:textColor="@color/cardview_light_background"
             android:padding="8dp"
-            app:layout_constraintRight_toRightOf="@+id/imageButton9"
+            android:gravity="center_vertical|center_horizontal"
+            app:layout_constraintRight_toRightOf="@+id/searchBreed"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageButton9"
-            app:layout_constraintLeft_toLeftOf="@+id/imageButton9"
-            android:gravity="center_vertical|center_horizontal" />
+            app:layout_constraintTop_toBottomOf="@+id/searchBreed" />
 
         <Button
             android:text="ADD"
@@ -176,28 +149,28 @@
 
         <TextView
             android:text="Noticeable"
-            android:layout_width="140dp"
-            android:layout_height="36dp"
+            android:layout_width="170dp"
+            android:layout_height="32dp"
             android:id="@+id/FBUser"
             android:background="@color/com_facebook_button_background_color_focused_disabled"
             android:padding="8dp"
             android:gravity="center_vertical|center_horizontal"
             app:layout_constraintTop_toTopOf="@+id/textView5"
-            app:layout_constraintLeft_toLeftOf="@+id/ageText" />
+            app:layout_constraintLeft_toLeftOf="@+id/ageText"
+            android:textColor="@color/cardview_light_background" />
 
         <EditText
-            android:layout_width="138dp"
-            android:layout_height="33dp"
+            android:layout_width="184dp"
+            android:layout_height="40dp"
             android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/ageText"
             android:hint="Age"
-            app:layout_constraintRight_toLeftOf="@+id/imageButton9"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintTop_toBottomOf="@+id/breedText"
+            android:textSize="14sp"
+            android:textAlignment="center"
             app:layout_constraintLeft_toLeftOf="@+id/breedText"
-            app:layout_constraintTop_toBottomOf="@+id/breedText" />
+            app:layout_constraintRight_toLeftOf="@+id/searchBreed" />
 
     </android.support.constraint.ConstraintLayout>
 </RelativeLayout>
