--- a/app/src/main/res/layout/content_my_dog_detail.xml
+++ b/app/src/main/res/layout/content_my_dog_detail.xml
@@ -110,13 +110,14 @@
             android:layout_width="138dp"
             app:layout_constraintLeft_toLeftOf="@+id/nameUser"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/emailUser" />
+            app:layout_constraintTop_toBottomOf="@+id/emailUser"
+            android:textColor="@color/cardview_light_background" />
 
         <TextView
             android:text="Location"
             android:layout_height="36dp"
             android:id="@+id/textView5"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:background="@color/com_facebook_button_background_color_focused_disabled"
             android:textColor="@color/cardview_light_background"
             android:padding="8dp"
@@ -139,7 +140,7 @@
             android:ems="10"
             android:id="@+id/noticeText"
             android:textAlignment="center"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:background="@color/com_facebook_button_background_color_focused"
             app:layout_constraintLeft_toLeftOf="@+id/FBUser"
             app:layout_constraintRight_toRightOf="@+id/FBUser"
