--- a/app/src/main/res/layout/content_same_dog.xml
+++ b/app/src/main/res/layout/content_same_dog.xml
@@ -6,10 +6,11 @@
 
     <GridView
         android:id="@+id/gridview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:verticalSpacing="0dp"
         android:horizontalSpacing="0dp"
         android:stretchMode="columnWidth"
-        android:numColumns="2"/>
+        android:numColumns="2"
+        android:paddingTop="50dp" />
 </FrameLayout>
