--- a/app/src/main/res/layout/content_dog_add_info.xml
+++ b/app/src/main/res/layout/content_dog_add_info.xml
@@ -94,7 +94,8 @@
             app:layout_constraintTop_toBottomOf="@+id/nameText"
             app:layout_constraintRight_toRightOf="@+id/nameText" />
 
-        <ImageView
+        <ImageButton
+            android:scaleType="fitCenter"
             android:layout_width="104dp"
             app:srcCompat="@drawable/mapbutton"
             android:id="@+id/AddLoc"
@@ -102,7 +103,8 @@
             android:layout_height="120dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/textView5"
-            app:layout_constraintRight_toRightOf="@+id/textView5" />
+            app:layout_constraintRight_toRightOf="@+id/textView5"
+            android:onClick="Add" />
 
         <Button
             android:text="Next"
