--- a/app/src/main/res/layout/list_item_found.xml
+++ b/app/src/main/res/layout/list_item_found.xml
@@ -19,8 +19,8 @@
             android:layout_height="56dp"
             android:layout_alignParentTop="true"
             android:src="@drawable/com_facebook_profile_picture_blank_square"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent" />
+            tools:layout_editor_absoluteY="0dp"
+            tools:layout_editor_absoluteX="0dp" />
 
         <TextView
             android:id="@+id/nameFB"
@@ -43,47 +43,29 @@
             app:layout_constraintTop_toBottomOf="@+id/nameFB"
             app:layout_constraintLeft_toLeftOf="@+id/nameFB" />
 
-        <TextView
-            android:id="@+id/nameFoundPost"
-            android:text="name : (name)"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="12sp"
-            app:layout_constraintLeft_toLeftOf="@+id/foundUserPicPost"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/foundUserPicPost" />
-
         <ImageView
             android:id="@+id/picFoundPost"
-            android:layout_width="351dp"
+            android:layout_width="384dp"
             android:layout_height="200dp"
             app:srcCompat="@color/wallet_bright_foreground_disabled_holo_light"
             app:layout_constraintTop_toBottomOf="@+id/noticeFoundPost"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
             android:background="@color/cast_intro_overlay_button_background_color"
-            app:layout_constraintLeft_toLeftOf="@+id/breedFoundPost"
-            app:layout_constraintHorizontal_bias="0.0" />
-
-        <TextView
-            android:id="@+id/breedFoundPost"
-            android:text="breed : (breed)"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="@+id/nameFoundPost"
-            app:layout_constraintTop_toBottomOf="@+id/nameFoundPost"
-            android:textSize="12sp" />
+            app:layout_constraintHorizontal_bias="0.1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="8dp" />
 
         <TextView
             android:id="@+id/noticeFoundPost"
             android:text="noticeable : (notice)"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="@+id/breedFoundPost"
-            app:layout_constraintTop_toBottomOf="@+id/breedFoundPost"
-            android:textSize="12sp" />
+            android:layout_width="381dp"
+            android:layout_height="60dp"
+            app:layout_constraintTop_toBottomOf="@+id/foundUserPicPost"
+            android:textSize="12sp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintLeft_toLeftOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 
