--- a/app/src/main/res/layout/activity_found_detail.xml
+++ b/app/src/main/res/layout/activity_found_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.siriporn.dogfindertest.SearchBreed">
+    tools:context="com.siriporn.dogfindertest.FoundDetail">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_search_breed" />
+    <include layout="@layout/content_found_detail" />
 
 
 </android.support.design.widget.CoordinatorLayout>
