--- a/app/src/main/res/layout/activity_found_post_detail.xml
+++ b/app/src/main/res/layout/activity_found_post_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.siriporn.dogfindertest.FoundDetail">
+    tools:context="com.siriporn.dogfindertest.FoundPostDetail">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,7 +21,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_found_detail" />
-
+    <include layout="@layout/content_found_post_detail" />
 
 </android.support.design.widget.CoordinatorLayout>
