--- a/app/src/main/res/layout/content_found_post_detail.xml
+++ b/app/src/main/res/layout/content_found_post_detail.xml
@@ -1,16 +1,203 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_found_post_detail"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:id="@+id/content_found_post_detail"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:paddingBottom="@dimen/activity_vertical_margin"
+android:paddingLeft="@dimen/activity_horizontal_margin"
+android:paddingRight="@dimen/activity_horizontal_margin"
+android:paddingTop="@dimen/activity_vertical_margin"
+app:layout_behavior="@string/appbar_scrolling_view_behavior"
+tools:context="com.siriporn.dogfindertest.FoundPostDetail"
+tools:showIn="@layout/activity_found_post_detail">
+
+
+<android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.siriporn.dogfindertest.FoundPostDetail"
-    tools:showIn="@layout/activity_found_post_detail">
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true">
+
+    <fragment
+        android:id="@+id/mapfragment"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="182dp"
+        android:layout_height="206dp"
+        tools:context="com.siriporn.dogfindertest.MapsActivity"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/picFoundPost"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp" />
+
+        <!--<ImageButton
+        android:layout_width="347dp"
+        app:srcCompat="@drawable/mapbutton"
+        android:id="@+id/AddLoc"
+        android:background="@color/cardview_shadow_start_color"
+        android:layout_height="82dp"
+        android:scaleType="fitCenter"
+        android:onClick="AddMapClicked"
+        tools:layout_editor_absoluteY="377dp"
+        tools:layout_editor_absoluteX="8dp" />
+        -->
+
+    <ImageView
+        android:id="@+id/foundUserPicWritePost"
+        android:layout_width="75dp"
+        android:layout_height="68dp"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/com_facebook_profile_picture_blank_square"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/nameFB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Name"
+        android:textSize="24sp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/foundUserPicWritePost"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:layout_width="375dp"
+        android:layout_height="143dp"
+        app:srcCompat="@drawable/camera2"
+        android:id="@+id/picFoundPost"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/noticeFoundPost" />
+
+    <ImageButton
+        android:layout_width="64dp"
+        android:layout_height="73dp"
+        app:srcCompat="@drawable/arrowpic"
+        android:id="@+id/imageButton7"
+        app:layout_constraintTop_toTopOf="@+id/picFoundPost"
+        android:layout_marginTop="32dp"
+        app:layout_constraintRight_toRightOf="@+id/picFoundPost"
+        android:background="@android:color/transparent" />
+
+    <ImageButton
+        android:layout_width="64dp"
+        android:layout_height="73dp"
+        app:srcCompat="@drawable/arrowpicleft"
+        android:id="@+id/imageButton8"
+        app:layout_constraintTop_toTopOf="@+id/picFoundPost"
+        android:layout_marginTop="32dp"
+        app:layout_constraintLeft_toLeftOf="@+id/picFoundPost"
+        android:background="@android:color/transparent" />
+
+    <TextView
+        android:id="@+id/noticeFoundPost"
+        android:hint="Write your post..."
+        android:layout_width="376dp"
+        android:layout_height="102dp"
+        android:textSize="18sp"
+        android:gravity="top|left"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/foundUserPicWritePost"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <Button
+        android:text="POST"
+        android:layout_width="312dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/writeFoundPostBtn"
+        android:onClick="writeFoundPostClicked"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
+        android:background="?android:attr/colorPrimary"
+        android:textStyle="normal|bold"
+        android:textColor="@color/cardview_light_background"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp" />
+
+    <TextView
+        android:text="Date"
+        android:layout_width="138dp"
+        android:layout_height="24dp"
+        android:id="@+id/DatePost"
+        app:layout_constraintTop_toBottomOf="@+id/nameFB"
+        app:layout_constraintLeft_toLeftOf="@+id/nameFB"
+        android:textSize="18sp" />
+
+    <TextView
+        android:text="phone nunber"
+        android:layout_width="158dp"
+        android:layout_height="30dp"
+        android:id="@+id/PhoneText"
+        android:textSize="18sp"
+        app:layout_constraintLeft_toLeftOf="@+id/Phone"
+        android:textAlignment="center"
+        android:textColor="@color/cardview_light_background"
+        android:background="@color/com_facebook_button_background_color_focused_disabled"
+        android:padding="5dp"
+        app:layout_constraintHorizontal_bias="0.87"
+        app:layout_constraintTop_toTopOf="@+id/mapfragment"
+        app:layout_constraintRight_toRightOf="@+id/Phone" />
+
+    <TextView
+        android:text="phone"
+        android:layout_width="157dp"
+        android:layout_height="32dp"
+        android:id="@+id/Phone"
+        android:textSize="18sp"
+        app:layout_constraintRight_toLeftOf="@+id/mapfragment"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        android:textAlignment="center"
+        app:layout_constraintTop_toBottomOf="@+id/PhoneText" />
+
+    <TextView
+        android:text="Email"
+        android:layout_width="158dp"
+        android:layout_height="30dp"
+        android:id="@+id/EmailText"
+        android:textSize="18sp"
+        android:textAlignment="center"
+        android:textColor="@color/cardview_light_background"
+        android:background="@color/com_facebook_button_background_color_focused_disabled"
+        android:padding="5dp"
+        tools:layout_editor_absoluteY="423dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Phone"
+        app:layout_constraintRight_toRightOf="@+id/Phone" />
+
+    <TextView
+        android:text="email"
+        android:layout_width="157dp"
+        android:layout_height="32dp"
+        android:id="@+id/Email"
+        android:textSize="18sp"
+        app:layout_constraintRight_toLeftOf="@+id/mapfragment"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        android:textAlignment="center"
+        app:layout_constraintHorizontal_bias="0.66"
+        app:layout_constraintTop_toBottomOf="@+id/EmailText" />
+</android.support.constraint.ConstraintLayout>
 
 </RelativeLayout>
