--- a/app/src/main/res/layout/content_dog_add_info.xml
+++ b/app/src/main/res/layout/content_dog_add_info.xml
@@ -63,7 +63,7 @@
             android:textSize="18sp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/nameText"
-            app:layout_constraintRight_toLeftOf="@+id/searchBreed"
+            app:layout_constraintRight_toLeftOf="@+id/searchMydog"
             android:id="@+id/breedText"
             app:layout_constraintLeft_toLeftOf="@+id/nameText" />
 
@@ -88,7 +88,7 @@
             android:layout_width="102dp"
             android:layout_height="70dp"
             app:srcCompat="@drawable/ic_search36dp"
-            android:id="@+id/searchBreed"
+            android:id="@+id/searchMydog"
             android:onClick="searchClicked"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/nameText"
@@ -132,9 +132,9 @@
             android:textColor="@color/cardview_light_background"
             android:padding="8dp"
             android:gravity="center_vertical|center_horizontal"
-            app:layout_constraintRight_toRightOf="@+id/searchBreed"
+            app:layout_constraintRight_toRightOf="@+id/searchMydog"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/searchBreed" />
+            app:layout_constraintTop_toBottomOf="@+id/searchMydog" />
 
         <Button
             android:text="ADD"
@@ -172,7 +172,7 @@
             android:textSize="14sp"
             android:textAlignment="center"
             app:layout_constraintLeft_toLeftOf="@+id/breedText"
-            app:layout_constraintRight_toLeftOf="@+id/searchBreed" />
+            app:layout_constraintRight_toLeftOf="@+id/searchMydog" />
 
     </android.support.constraint.ConstraintLayout>
 </RelativeLayout>
