--- a/app/src/main/res/layout/content_found_post_detail.xml
+++ b/app/src/main/res/layout/content_found_post_detail.xml
@@ -21,16 +21,15 @@ tools:showIn="@layout/activity_found_post_detail">
     android:layout_alignParentStart="true">
 
     <fragment
-        android:id="@+id/mapfragment"
+        android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="182dp"
-        android:layout_height="206dp"
+        android:layout_width="375dp"
+        android:layout_height="138dp"
         tools:context="com.siriporn.dogfindertest.MapsActivity"
+        app:layout_constraintTop_toBottomOf="@+id/EmailText"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/picFoundPost"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp" />
+        app:layout_constraintRight_toRightOf="@+id/EmailText"
+        app:layout_constraintLeft_toLeftOf="@+id/Email" />
 
         <!--<ImageButton
         android:layout_width="347dp"
@@ -62,12 +61,11 @@ tools:showIn="@layout/activity_found_post_detail">
         android:layout_marginStart="8dp"
         app:layout_constraintLeft_toRightOf="@+id/foundUserPicWritePost"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/foundUserPicWritePost" />
 
     <ImageView
         android:layout_width="375dp"
-        android:layout_height="143dp"
+        android:layout_height="139dp"
         app:srcCompat="@drawable/camera2"
         android:id="@+id/picFoundPost"
         android:layout_marginEnd="16dp"
@@ -76,8 +74,8 @@ tools:showIn="@layout/activity_found_post_detail">
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/noticeFoundPost" />
+        app:layout_constraintTop_toBottomOf="@+id/noticeLostPost"
+        android:layout_marginTop="8dp" />
 
     <ImageButton
         android:layout_width="64dp"
@@ -87,7 +85,10 @@ tools:showIn="@layout/activity_found_post_detail">
         app:layout_constraintTop_toTopOf="@+id/picFoundPost"
         android:layout_marginTop="32dp"
         app:layout_constraintRight_toRightOf="@+id/picFoundPost"
-        android:background="@android:color/transparent" />
+        android:background="@android:color/transparent"
+        android:onClick="BtnRightClicked (FoundPostDetail)"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp" />
 
     <ImageButton
         android:layout_width="64dp"
@@ -97,38 +98,22 @@ tools:showIn="@layout/activity_found_post_detail">
         app:layout_constraintTop_toTopOf="@+id/picFoundPost"
         android:layout_marginTop="32dp"
         app:layout_constraintLeft_toLeftOf="@+id/picFoundPost"
-        android:background="@android:color/transparent" />
+        android:background="@android:color/transparent"
+        android:onClick="BtnLeftClicked (FoundPostDetail)"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp" />
 
     <TextView
-        android:id="@+id/noticeFoundPost"
+        android:id="@+id/noticeLostPost"
         android:hint="Write your post..."
         android:layout_width="376dp"
-        android:layout_height="102dp"
+        android:layout_height="47dp"
         android:textSize="18sp"
         android:gravity="top|left"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/foundUserPicWritePost"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
-
-    <Button
-        android:text="POST"
-        android:layout_width="312dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/writeFoundPostBtn"
-        android:onClick="writeFoundPostClicked"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp"
-        android:background="?android:attr/colorPrimary"
-        android:textStyle="normal|bold"
-        android:textColor="@color/cardview_light_background"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp" />
 
     <TextView
         android:text="Date"
@@ -140,64 +125,60 @@ tools:showIn="@layout/activity_found_post_detail">
         android:textSize="18sp" />
 
     <TextView
-        android:text="phone nunber"
-        android:layout_width="158dp"
-        android:layout_height="30dp"
-        android:id="@+id/PhoneText"
+        android:text="phone"
+        android:layout_width="93dp"
+        android:layout_height="39dp"
+        android:id="@+id/Phone"
         android:textSize="18sp"
-        app:layout_constraintLeft_toLeftOf="@+id/Phone"
         android:textAlignment="center"
         android:textColor="@color/cardview_light_background"
         android:background="@color/com_facebook_button_background_color_focused_disabled"
         android:padding="5dp"
-        app:layout_constraintHorizontal_bias="0.87"
-        app:layout_constraintTop_toTopOf="@+id/mapfragment"
-        app:layout_constraintRight_toRightOf="@+id/Phone" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/picFoundPost" />
 
     <TextView
         android:text="phone"
-        android:layout_width="157dp"
-        android:layout_height="32dp"
-        android:id="@+id/Phone"
+        android:layout_height="38dp"
+        android:id="@+id/PhoneText"
         android:textSize="18sp"
-        app:layout_constraintRight_toLeftOf="@+id/mapfragment"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
         android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@+id/PhoneText" />
+        android:layout_width="281dp"
+        app:layout_constraintBottom_toBottomOf="@+id/Phone"
+        app:layout_constraintTop_toTopOf="@+id/Phone"
+        android:background="@color/com_facebook_button_background_color_disabled"
+        android:paddingTop="5dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/Phone" />
 
     <TextView
         android:text="Email"
-        android:layout_width="158dp"
-        android:layout_height="30dp"
-        android:id="@+id/EmailText"
+        android:layout_width="92dp"
+        android:layout_height="33dp"
+        android:id="@+id/Email"
         android:textSize="18sp"
         android:textAlignment="center"
         android:textColor="@color/cardview_light_background"
         android:background="@color/com_facebook_button_background_color_focused_disabled"
         android:padding="5dp"
-        tools:layout_editor_absoluteY="423dp"
-        app:layout_constraintLeft_toLeftOf="@+id/Phone"
-        app:layout_constraintRight_toRightOf="@+id/Phone" />
+        app:layout_constraintRight_toRightOf="@+id/Phone"
+        app:layout_constraintTop_toBottomOf="@+id/Phone"
+        android:layout_marginTop="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/Phone" />
 
     <TextView
         android:text="email"
-        android:layout_width="157dp"
-        android:layout_height="32dp"
-        android:id="@+id/Email"
+        android:layout_width="283dp"
+        android:layout_height="33dp"
+        android:id="@+id/EmailText"
         android:textSize="18sp"
-        app:layout_constraintRight_toLeftOf="@+id/mapfragment"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
         android:textAlignment="center"
-        app:layout_constraintHorizontal_bias="0.66"
-        app:layout_constraintTop_toBottomOf="@+id/EmailText" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/Email"
+        app:layout_constraintLeft_toRightOf="@+id/Email"
+        android:background="@color/com_facebook_button_background_color_disabled"
+        android:paddingTop="5dp" />
 </android.support.constraint.ConstraintLayout>
 
 </RelativeLayout>
