--- a/app/src/main/res/layout/content_lost_post_acitivity.xml
+++ b/app/src/main/res/layout/content_lost_post_acitivity.xml
@@ -13,4 +13,73 @@
     tools:context="com.siriporn.dogfindertest.LostPostAcitivity"
     tools:showIn="@layout/activity_lost_post_acitivity">
 
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="17dp"
+        android:layout_marginStart="17dp">
+
+    <ImageView
+        android:id="@+id/lostUserPicWritePost"
+        android:layout_width="69dp"
+        android:layout_height="62dp"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/crop_square_36"
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <TextView
+        android:id="@+id/nameFB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Name"
+        android:textSize="24sp"
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="85dp" />
+
+    <TextView
+        android:id="@+id/foundDatePost"
+        android:text="Date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        tools:layout_editor_absoluteY="36dp"
+        tools:layout_editor_absoluteX="85dp" />
+
+    <TextView
+        android:id="@+id/nameLostPost"
+        android:text="My dog's name"
+        android:layout_width="218dp"
+        android:layout_height="68dp"
+        android:textSize="30sp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/lostUserPicWritePost"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp" />
+
+        <ImageButton
+            android:layout_width="82dp"
+            android:layout_height="68dp"
+            app:srcCompat="@drawable/ic_search36dp"
+            android:id="@+id/searchMydog"
+            android:onClick="searchClicked"
+            tools:layout_editor_absoluteY="78dp"
+            tools:layout_editor_absoluteX="249dp" />
+
+        <TextView
+            android:id="@+id/noticeLostPost"
+            android:text="noticeable : (notice)"
+            android:layout_width="315dp"
+            android:layout_height="166dp"
+            android:textSize="14sp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/nameLostPost"
+            app:layout_constraintRight_toRightOf="@+id/searchMydog"
+            app:layout_constraintLeft_toLeftOf="@+id/nameLostPost"
+            app:layout_constraintHorizontal_bias="1.0" />
+
+    </android.support.constraint.ConstraintLayout>
 </RelativeLayout>
