--- a/app/src/main/res/layout/layout_lost.xml
+++ b/app/src/main/res/layout/layout_lost.xml
@@ -26,17 +26,14 @@
             android:src="@drawable/addcircle"/>
 
         <ListView
-            android:layout_width="368dp"
-            android:layout_height="468dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:id="@+id/lostListView"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.100000024" />
 
     </android.support.constraint.ConstraintLayout>
 </RelativeLayout>
