--- a/app/src/main/res/layout/list_item_lost.xml
+++ b/app/src/main/res/layout/list_item_lost.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="17dp">
 
         <ImageView
-            android:id="@+id/lostUserPicPost"
+            android:id="@+id/lostUserPicWritePost"
             android:layout_width="69dp"
             android:layout_height="62dp"
             android:layout_alignParentTop="true"
@@ -29,9 +29,9 @@
             android:layout_height="wrap_content"
             android:text="Name"
             android:textSize="24sp"
-            app:layout_constraintTop_toTopOf="@+id/lostUserPicPost"
+            app:layout_constraintTop_toTopOf="@+id/lostUserPicWritePost"
             android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toRightOf="@+id/lostUserPicPost"
+            app:layout_constraintLeft_toRightOf="@+id/lostUserPicWritePost"
             android:layout_marginLeft="16dp" />
 
         <TextView
@@ -49,9 +49,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
-            app:layout_constraintLeft_toLeftOf="@+id/lostUserPicPost"
+            app:layout_constraintLeft_toLeftOf="@+id/lostUserPicWritePost"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/lostUserPicPost"
+            app:layout_constraintTop_toBottomOf="@+id/lostUserPicWritePost"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp" />
 
@@ -60,12 +60,12 @@
             android:layout_width="379dp"
             android:layout_height="221dp"
             app:srcCompat="@color/wallet_bright_foreground_disabled_holo_light"
-            app:layout_constraintTop_toBottomOf="@+id/noticeFoundPost"
+            app:layout_constraintTop_toBottomOf="@+id/noticeLostPost"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="16dp"
             android:background="@color/cast_intro_overlay_button_background_color"
-            app:layout_constraintLeft_toLeftOf="@+id/noticeFoundPost"
+            app:layout_constraintLeft_toLeftOf="@+id/noticeLostPost"
             app:layout_constraintHorizontal_bias="1.0"
             android:layout_marginTop="8dp" />
 
@@ -79,7 +79,7 @@
             android:textSize="14sp" />
 
         <TextView
-            android:id="@+id/noticeFoundPost"
+            android:id="@+id/noticeLostPost"
             android:text="noticeable : (notice)"
             android:layout_width="370dp"
             android:layout_height="26dp"
