--- a/app/src/main/res/layout/activity_same_dog_search.xml
+++ b/app/src/main/res/layout/activity_same_dog_search.xml
@@ -23,12 +23,10 @@
 
     <include layout="@layout/content_same_dog_search" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/searchDogListView" />
+
 
 </android.support.design.widget.CoordinatorLayout>
