--- a/app/src/main/res/layout/layout_find.xml
+++ b/app/src/main/res/layout/layout_find.xml
@@ -10,6 +10,21 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true">
 
+        <ImageButton
+            android:layout_width="65dp"
+            android:layout_height="67dp"
+            android:id="@+id/addFindDog"
+            android:background="@drawable/oval"
+            android:elevation="10dp"
+            android:layout_alignParentBottom="true"
+            android:onClick="AddFindPostClicked"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp"
+            android:src="@drawable/addcircle"/>
+
         <ListView
             android:layout_width="368dp"
             android:layout_height="468dp"
