--- a/app/src/main/res/layout/content_find_post.xml
+++ b/app/src/main/res/layout/content_find_post.xml
@@ -35,34 +35,33 @@
                 android:layout_marginEnd="16dp"
                 app:layout_constraintRight_toRightOf="parent"
                 android:layout_marginRight="16dp"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="8dp" />
+                app:layout_constraintTop_toBottomOf="@+id/showFindDogYouLike" />
 
 
-            <Button
+            <TextView
                 android:text="Find dog you like"
-                android:layout_width="378dp"
-                android:layout_height="88dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
-                android:id="@+id/FindDogYouLike"
-                android:onClick="FindDogYouLikeClicked"
-                app:layout_constraintTop_toBottomOf="@+id/captureButton"
+                android:id="@+id/showFindDogYouLike"
                 android:layout_marginEnd="16dp"
                 app:layout_constraintRight_toRightOf="parent"
                 android:layout_marginRight="16dp"
                 android:layout_marginStart="16dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="32dp"
                 android:textSize="30sp"
-                android:padding="10dp" />
+                android:padding="10dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:textStyle="normal|bold"
+                android:textAlignment="center" />
 
             <Button
                 android:text="ADD"
-                android:layout_width="188dp"
-                android:layout_height="wrap_content"
+                android:layout_width="377dp"
+                android:layout_height="62dp"
                 android:id="@+id/captureButton"
                 app:layout_constraintTop_toBottomOf="@+id/captureView"
                 android:layout_marginEnd="16dp"
@@ -71,9 +70,27 @@
                 android:layout_marginStart="16dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginLeft="16dp"
+                android:layout_marginTop="8dp"
+                android:textSize="18sp" />
+
+            <ImageButton
+                android:layout_width="378dp"
+                android:layout_height="182dp"
+                app:srcCompat="@drawable/skyblueee"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginRight="16dp"
+                android:layout_marginStart="16dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginLeft="16dp"
+                android:id="@+id/FindDogYouLike"
+                android:onClick="FindDogYouLikeClicked"
+                app:layout_constraintTop_toBottomOf="@+id/captureButton"
+                app:layout_constraintHorizontal_bias="0.52"
+                android:background="#7cc6ff"
                 android:layout_marginTop="16dp" />
-
-
 
 
         </android.support.constraint.ConstraintLayout>
