--- a/app/src/main/res/layout/content_dog_add_info.xml
+++ b/app/src/main/res/layout/content_dog_add_info.xml
@@ -18,150 +18,168 @@
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
-        <android.support.constraint.ConstraintLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true">
+            android:layout_height="match_parent">
 
-            <ImageView
-                android:layout_width="175dp"
-                android:layout_height="121dp"
-                app:srcCompat="@drawable/camera2"
-                android:id="@+id/captureView"
-                android:layout_marginStart="16dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginLeft="16dp"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginRight="16dp"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <EditText
-                android:layout_width="384dp"
-                android:layout_height="46dp"
-                android:inputType="textPersonName"
-                android:ems="10"
-                android:id="@+id/nameText"
-                android:textAlignment="center"
-                android:hint="Dog's name"
-                android:background="@color/com_facebook_button_background_color_selected"
-                android:padding="10dp"
-                android:textSize="24sp"
-                android:textStyle="normal|bold"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/captureButton"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent" />
-
-            <TextView
-                android:layout_width="258dp"
-                android:layout_height="31dp"
-                android:ems="10"
-                android:textAlignment="center"
-                android:textSize="18sp"
-                android:id="@+id/breedText"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/nameText"
-                app:layout_constraintRight_toLeftOf="@+id/searchMydog"
-                app:layout_constraintLeft_toLeftOf="parent" />
-
-            <EditText
-                android:layout_width="372dp"
-                android:layout_height="42dp"
-                android:inputType="textPersonName"
-                android:ems="10"
-                android:id="@+id/noticeText"
-                android:textAlignment="center"
-                android:hint="Write here..."
-                android:textSize="14sp"
-                android:gravity="top|left"
-                android:background="@color/com_facebook_button_background_color_focused"
-                app:layout_constraintLeft_toLeftOf="@+id/FBUser"
-                app:layout_constraintRight_toRightOf="@+id/FBUser"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintTop_toBottomOf="@+id/FBUser"
-                android:layout_marginTop="8dp" />
-
-            <ImageButton
-                android:layout_width="102dp"
-                android:layout_height="70dp"
-                app:srcCompat="@drawable/ic_search36dp"
-                android:id="@+id/searchMydog"
-                android:onClick="searchClicked"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/nameText"
-                app:layout_constraintRight_toRightOf="@+id/nameText" />
-
-            <ImageButton
-                android:layout_width="65dp"
-                android:layout_height="67dp"
-                android:id="@+id/acceptdog"
-                android:background="@drawable/oval"
-                android:elevation="10dp"
-                android:layout_alignParentBottom="true"
-                android:onClick="nextClicked"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginRight="16dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="16dp"
-                android:src="@drawable/addcircle"/>
-
-            <Button
-                android:text="ADD"
-                android:layout_width="188dp"
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/captureButton"
-                app:layout_constraintTop_toBottomOf="@+id/captureView"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginRight="16dp"
-                android:layout_marginStart="16dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginLeft="16dp" />
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true">
 
-            <TextView
-                android:text="Noticeable"
-                android:layout_width="373dp"
-                android:layout_height="32dp"
-                android:id="@+id/FBUser"
-                android:background="@color/com_facebook_button_background_color_focused_disabled"
-                android:padding="8dp"
-                android:gravity="center_vertical|center_horizontal"
-                app:layout_constraintLeft_toLeftOf="@+id/ageText"
-                android:textColor="@color/cardview_light_background"
-                app:layout_constraintRight_toRightOf="@+id/searchMydog"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/ageText" />
+                <ImageView
+                    android:layout_width="209dp"
+                    android:layout_height="183dp"
+                    app:srcCompat="@drawable/camera2"
+                    android:id="@+id/captureView"
+                    android:layout_marginStart="16dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginEnd="16dp"
+                    app:layout_constraintRight_toRightOf="parent"
+                    android:layout_marginRight="16dp"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            <EditText
-                android:layout_width="259dp"
-                android:layout_height="39dp"
-                android:inputType="textPersonName"
-                android:ems="10"
-                android:id="@+id/ageText"
-                android:hint="Age"
-                android:textSize="14sp"
-                android:textAlignment="center"
-                app:layout_constraintLeft_toLeftOf="@+id/breedText"
-                app:layout_constraintRight_toRightOf="@+id/breedText"
-                app:layout_constraintTop_toBottomOf="@+id/breedText" />
+                <EditText
+                    android:layout_width="384dp"
+                    android:layout_height="46dp"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/nameText"
+                    android:textAlignment="center"
+                    android:hint="Dog's name"
+                    android:background="@color/com_facebook_button_background_color_selected"
+                    android:padding="10dp"
+                    android:textSize="24sp"
+                    android:textStyle="normal|bold"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/captureButton"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent" />
 
-            <fragment
-                android:id="@+id/map"
-                android:name="com.google.android.gms.maps.SupportMapFragment"
-                android:layout_width="377dp"
-                android:layout_height="138dp"
-                tools:context="com.siriporn.dogfindertest.MapsActivity"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/noticeText" />
+                <TextView
+                    android:layout_width="258dp"
+                    android:layout_height="31dp"
+                    android:ems="10"
+                    android:textAlignment="center"
+                    android:textSize="18sp"
+                    android:id="@+id/breedText"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/nameText"
+                    app:layout_constraintRight_toLeftOf="@+id/searchMydog"
+                    app:layout_constraintLeft_toLeftOf="parent" />
 
-        </android.support.constraint.ConstraintLayout>
+                <EditText
+                    android:layout_width="372dp"
+                    android:layout_height="42dp"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/noticeText"
+                    android:textAlignment="center"
+                    android:hint="Write here..."
+                    android:textSize="14sp"
+                    android:gravity="top|left"
+                    android:background="@color/com_facebook_button_background_color_focused"
+                    app:layout_constraintLeft_toLeftOf="@+id/FBUser"
+                    app:layout_constraintRight_toRightOf="@+id/FBUser"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintTop_toBottomOf="@+id/FBUser"
+                    android:layout_marginTop="8dp" />
+
+                <ImageButton
+                    android:layout_width="102dp"
+                    android:layout_height="70dp"
+                    app:srcCompat="@drawable/ic_search36dp"
+                    android:id="@+id/searchMydog"
+                    android:onClick="searchClicked"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/nameText"
+                    app:layout_constraintRight_toRightOf="@+id/nameText" />
+
+                <ImageButton
+                    android:layout_width="65dp"
+                    android:layout_height="67dp"
+                    android:id="@+id/acceptdog"
+                    android:background="@drawable/oval"
+                    android:elevation="10dp"
+                    android:layout_alignParentBottom="true"
+                    android:onClick="nextClicked"
+                    android:layout_marginEnd="16dp"
+                    app:layout_constraintRight_toRightOf="parent"
+                    android:layout_marginRight="16dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="16dp"
+                    android:src="@drawable/addcircle"/>
+
+                <Button
+                    android:text="ADD"
+                    android:layout_width="188dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/captureButton"
+                    app:layout_constraintTop_toBottomOf="@+id/captureView"
+                    android:layout_marginEnd="16dp"
+                    app:layout_constraintRight_toRightOf="parent"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginStart="16dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:layout_marginLeft="16dp" />
+
+                <TextView
+                    android:text="Noticeable"
+                    android:layout_width="373dp"
+                    android:layout_height="32dp"
+                    android:id="@+id/FBUser"
+                    android:background="@color/com_facebook_button_background_color_focused_disabled"
+                    android:padding="8dp"
+                    android:gravity="center_vertical|center_horizontal"
+                    app:layout_constraintLeft_toLeftOf="@+id/ageText"
+                    android:textColor="@color/cardview_light_background"
+                    app:layout_constraintRight_toRightOf="@+id/searchMydog"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/ageText" />
+
+                <EditText
+                    android:layout_width="259dp"
+                    android:layout_height="39dp"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/ageText"
+                    android:hint="Age"
+                    android:textSize="14sp"
+                    android:textAlignment="center"
+                    app:layout_constraintLeft_toLeftOf="@+id/breedText"
+                    app:layout_constraintRight_toRightOf="@+id/breedText"
+                    app:layout_constraintTop_toBottomOf="@+id/breedText" />
+
+                <fragment
+                    android:id="@+id/map"
+                    android:name="com.google.android.gms.maps.SupportMapFragment"
+                    android:layout_width="377dp"
+                    android:layout_height="138dp"
+                    tools:context="com.siriporn.dogfindertest.MapsActivity"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/noticeText" />
+
+                <ScrollView
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    tools:layout_editor_absoluteY="8dp"
+                    tools:layout_editor_absoluteX="8dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical" />
+                </ScrollView>
+
+            </android.support.constraint.ConstraintLayout>
+        </ScrollView>
+
     </LinearLayout>
 
 </RelativeLayout>
