--- a/app/src/main/res/layout/content_found_post.xml
+++ b/app/src/main/res/layout/content_found_post.xml
@@ -72,7 +72,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/noticeLostPost" />
+            app:layout_constraintTop_toBottomOf="@+id/noticeDog" />
 
         <ImageButton
             android:layout_width="64dp"
@@ -95,7 +95,7 @@
             android:background="@android:color/transparent" />
 
         <EditText
-            android:id="@+id/noticeLostPost"
+            android:id="@+id/noticeDog"
             android:hint="Write your post..."
             android:layout_width="376dp"
             android:layout_height="102dp"
