--- a/app/src/main/res/layout/content_found_post_detail.xml
+++ b/app/src/main/res/layout/content_found_post_detail.xml
@@ -74,7 +74,7 @@ tools:showIn="@layout/activity_found_post_detail">
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/noticeLostPost"
+        app:layout_constraintTop_toBottomOf="@+id/noticeDog"
         android:layout_marginTop="8dp" />
 
     <ImageButton
@@ -104,7 +104,7 @@ tools:showIn="@layout/activity_found_post_detail">
         android:layout_marginLeft="24dp" />
 
     <TextView
-        android:id="@+id/noticeLostPost"
+        android:id="@+id/noticeDog"
         android:layout_width="376dp"
         android:layout_height="47dp"
         android:textSize="18sp"
