--- a/app/src/main/res/layout/layout_found.xml
+++ b/app/src/main/res/layout/layout_found.xml
@@ -26,8 +26,8 @@
             android:src="@drawable/addcircle"/>
 
         <ListView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/foundListView"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
