--- a/app/src/main/res/layout/layout_mydog.xml
+++ b/app/src/main/res/layout/layout_mydog.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context="com.siriporn.dogfindertest.MainActivity">
+    android:layout_width="match_parent" android:layout_height="match_parent">
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true">
 
 
         <ImageButton
@@ -24,19 +27,15 @@
             android:src="@drawable/addcircle"/>
 
         <ListView
-            android:layout_width="368dp"
-            android:layout_height="468dp"
+            android:layout_width="411dp"
+            android:layout_height="wrap_content"
             android:id="@+id/dogListView"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
-            android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintTop_toTopOf="parent"
+            android:headerDividersEnabled="true"
+            android:footerDividersEnabled="true" />
 
 
 </android.support.constraint.ConstraintLayout>
+</RelativeLayout>
