--- a/app/src/main/res/layout/list_item_found.xml
+++ b/app/src/main/res/layout/list_item_found.xml
@@ -6,12 +6,10 @@
     android:layout_height="match_parent" >
 
     <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="17dp"
-        android:layout_marginStart="17dp">
+        android:layout_alignParentStart="true">
 
         <ImageView
             android:id="@+id/foundUserPicPost"
@@ -19,9 +17,11 @@
             android:layout_height="56dp"
             android:layout_alignParentTop="true"
             android:src="@drawable/com_facebook_profile_picture_blank_square"
-            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp" />
+            android:layout_marginTop="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp" />
 
         <TextView
             android:id="@+id/nameFB"
@@ -40,28 +40,30 @@
             android:text="Date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:textSize="18sp"
             app:layout_constraintTop_toBottomOf="@+id/nameFB"
             app:layout_constraintLeft_toLeftOf="@+id/nameFB" />
 
         <ImageView
             android:id="@+id/picFoundPost"
-            android:layout_width="384dp"
-            android:layout_height="228dp"
+            android:layout_width="0dp"
+            android:layout_height="285dp"
             app:srcCompat="@color/wallet_bright_foreground_disabled_holo_light"
-            app:layout_constraintTop_toBottomOf="@+id/noticeLostPost"
+            app:layout_constraintTop_toBottomOf="@+id/noticeDog"
             app:layout_constraintRight_toRightOf="parent"
             android:background="@color/wallet_bright_foreground_disabled_holo_light"
             android:layout_marginTop="8dp"
             app:layout_constraintLeft_toLeftOf="@+id/foundUserPicPost"
             app:layout_constraintHorizontal_bias="0.0"
-            android:scaleType="fitXY"/>
+            android:scaleType="fitXY"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp" />
 
         <TextView
-            android:id="@+id/noticeLostPost"
+            android:id="@+id/noticeDog"
             android:text="noticeable : (notice)"
-            android:layout_width="381dp"
-            android:layout_height="28dp"
+            android:layout_width="391dp"
+            android:layout_height="21dp"
             app:layout_constraintTop_toBottomOf="@+id/foundUserPicPost"
             android:textSize="18sp"
             android:layout_marginEnd="8dp"
