--- a/app/src/main/res/layout/list_item_lost.xml
+++ b/app/src/main/res/layout/list_item_lost.xml
@@ -9,9 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="17dp"
-        android:layout_marginStart="17dp">
+        android:layout_alignParentStart="true">
 
         <ImageView
             android:id="@+id/lostUserPicWritePost"
@@ -21,7 +19,9 @@
             android:src="@drawable/crop_square_36"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp" />
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp" />
 
         <TextView
             android:id="@+id/nameFB"
@@ -48,46 +48,86 @@
             android:text="name : (name)"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
-            app:layout_constraintLeft_toLeftOf="@+id/lostUserPicWritePost"
+            android:textSize="18sp"
+            android:layout_marginStart="40dp"
+            app:layout_constraintLeft_toRightOf="@+id/textView8"
+            android:layout_marginLeft="40dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/lostUserPicWritePost"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp" />
+            app:layout_constraintTop_toBottomOf="@+id/lostUserPicWritePost" />
 
         <ImageView
             android:id="@+id/picLostPost"
-            android:layout_width="379dp"
-            android:layout_height="221dp"
+            android:layout_width="0dp"
+            android:layout_height="278dp"
             app:srcCompat="@color/wallet_bright_foreground_disabled_holo_light"
-            app:layout_constraintTop_toBottomOf="@+id/noticeLostPost"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
             android:background="@color/cast_intro_overlay_button_background_color"
-            app:layout_constraintLeft_toLeftOf="@+id/noticeLostPost"
-            app:layout_constraintHorizontal_bias="1.0"
-            android:layout_marginTop="8dp"
-            android:scaleType="fitXY"/>
+            android:scaleType="fitXY"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="@+id/textView11"
+            app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/NotePost"
+            android:layout_marginTop="8dp" />
 
         <TextView
             android:id="@+id/breedLostPost"
             android:text="breed : (breed)"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="@+id/nameLostPost"
+            android:textSize="18sp"
             app:layout_constraintTop_toBottomOf="@+id/nameLostPost"
-            android:textSize="14sp" />
+            app:layout_constraintLeft_toLeftOf="@+id/nameLostPost" />
 
         <TextView
-            android:id="@+id/noticeLostPost"
+            android:id="@+id/noticeDog"
             android:text="noticeable : (notice)"
-            android:layout_width="370dp"
-            android:layout_height="26dp"
+            android:layout_width="306dp"
+            android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="@+id/breedLostPost"
             app:layout_constraintTop_toBottomOf="@+id/breedLostPost"
-            android:textSize="14sp"
-            android:layout_marginTop="8dp" />
+            android:textSize="18sp"
+            app:layout_constraintRight_toRightOf="@+id/picLostPost" />
+
+        <TextView
+            android:text="Name :"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView8"
+            app:layout_constraintLeft_toLeftOf="@+id/lostUserPicWritePost"
+            app:layout_constraintTop_toTopOf="@+id/nameLostPost"
+            android:textSize="18sp"
+            android:textStyle="normal|bold" />
+
+        <TextView
+            android:text="Breed :"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView10"
+            android:textSize="18sp"
+            app:layout_constraintTop_toTopOf="@+id/breedLostPost"
+            app:layout_constraintLeft_toLeftOf="@+id/textView8"
+            android:textStyle="normal|bold" />
+
+        <TextView
+            android:text="Noticeable :"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView11"
+            android:textSize="18sp"
+            app:layout_constraintTop_toTopOf="@+id/noticeDog"
+            app:layout_constraintLeft_toLeftOf="@+id/textView10"
+            android:textStyle="normal|bold" />
+
+        <TextView
+            android:text="NotePost"
+            android:layout_width="395dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/NotePost"
+            android:textSize="18sp"
+            app:layout_constraintTop_toBottomOf="@+id/noticeDog"
+            app:layout_constraintLeft_toLeftOf="@+id/textView11"
+            android:layout_marginTop="16dp" />
 
     </android.support.constraint.ConstraintLayout>
 
