--- a/app/src/main/res/layout/list_item_mydog.xml
+++ b/app/src/main/res/layout/list_item_mydog.xml
@@ -7,22 +7,37 @@
         android:id="@+id/imgDogAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:src="@drawable/skyblueee"
+        android:layout_marginTop="8dp"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="10dp"
-        android:src="@drawable/camera" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp" />
 
     <TextView
         android:id="@+id/nameDogAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/imgDogAccount"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="15dp"
-        android:layout_toRightOf="@+id/imgDogAccount"
         android:text="TextView"
-        android:textSize="24sp" />
+        android:textSize="30sp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="24dp"
+        android:layout_alignBottom="@+id/textView"
+        android:layout_toRightOf="@+id/imgDogAccount"
+        android:layout_toEndOf="@+id/imgDogAccount"
+        android:textStyle="normal|bold" />
+
+    <TextView
+        android:text="Thousandway"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:textSize="18sp"
+        android:layout_marginBottom="23dp"
+        android:layout_alignBottom="@+id/imgDogAccount"
+        android:layout_alignLeft="@+id/nameDogAccount"
+        android:layout_alignStart="@+id/nameDogAccount" />
 
 </RelativeLayout>
