--- a/app/src/main/res/layout/activity_same_dog_search.xml
+++ b/app/src/main/res/layout/activity_same_dog_search.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent" android:layout_height="match_parent">
+
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,6 +11,8 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context="com.siriporn.dogfindertest.SameDogSearchActivity">
+
+    <include layout="@layout/content_same_dog_search" />
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,12 +28,10 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_same_dog_search" />
-
-    <ListView
-        android:layout_width="match_parent"
+    <ListView android:id="@+id/searchDogListView"
         android:layout_height="match_parent"
-        android:id="@+id/searchDogListView" />
+        android:layout_width="match_parent" />
 
 
 </android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
