--- a/app/src/main/res/layout/content_my_dog_detail.xml
+++ b/app/src/main/res/layout/content_my_dog_detail.xml
@@ -13,142 +13,168 @@
     tools:context="com.siriporn.dogfindertest.MyDogDetail"
     tools:showIn="@layout/activity_my_dog_detail">
 
-    <android.support.constraint.ConstraintLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:layout_width="185dp"
-            android:layout_height="148dp"
-            app:srcCompat="@drawable/camera2"
-            android:id="@+id/imageUser"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp"
-            app:layout_constraintHorizontal_bias="0.52" />
-
-        <ImageButton
-            android:layout_width="64dp"
-            android:layout_height="73dp"
-            app:srcCompat="@drawable/arrowpic"
-            android:id="@+id/ButtonRight"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
-            app:layout_constraintLeft_toRightOf="@+id/imageUser"
-            android:layout_marginTop="48dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:onClick="BtnRightClicked"
-            android:background="@android:color/transparent" />
-
-        <ImageButton
-            android:layout_width="64dp"
-            android:layout_height="73dp"
-            app:srcCompat="@drawable/arrowpicleft"
-            android:id="@+id/ButtonLeft"
-            android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp"
-            app:layout_constraintRight_toLeftOf="@+id/imageUser"
-            app:layout_constraintHorizontal_bias="1.0"
-            android:layout_marginTop="48dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:onClick="BtnLeftClicked"
-            android:background="@android:color/transparent" />
-
-        <TextView
-            android:layout_width="wrap_content"
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/nameUser"
-            android:textAlignment="center"
-            app:layout_constraintTop_toBottomOf="@+id/imageUser"
-            android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
-            android:background="@color/com_facebook_button_background_color_pressed"
-            android:padding="10dp"
-            android:textSize="24sp"
-            app:layout_constraintHorizontal_bias="0.56"
-            android:textStyle="normal|bold"
-            android:textColor="@color/cast_expanded_controller_text_color"
-            android:layout_marginTop="20dp" />
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:id="@+id/emailUser"
-            android:textAlignment="center"
-            app:layout_constraintTop_toBottomOf="@+id/nameUser"
-            app:layout_constraintLeft_toLeftOf="@+id/nameUser"
-            android:padding="5dp"
-            android:background="@color/com_facebook_button_background_color_disabled"
-            android:layout_marginTop="2dp"
-            app:layout_constraintRight_toRightOf="@+id/nameUser" />
+            <ImageView
+                android:layout_width="387dp"
+                android:layout_height="307dp"
+                app:srcCompat="@drawable/camera2"
+                android:id="@+id/imageUser"
+                android:scaleType="fitXY"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent" />
 
-        <TextView
-            android:text="Noticeable"
-            android:layout_height="36dp"
-            android:id="@+id/FBUser"
-            android:background="@color/com_facebook_button_background_color_focused_disabled"
-            android:padding="8dp"
-            app:layout_constraintHorizontal_bias="1.0"
-            android:gravity="center_vertical|center_horizontal"
-            android:layout_width="363dp"
-            app:layout_constraintLeft_toLeftOf="@+id/nameUser"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/emailUser"
-            android:textColor="@color/cardview_light_background"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp" />
+            <!--<ImageButton
+                android:layout_width="64dp"
+                android:layout_height="73dp"
+                app:srcCompat="@drawable/arrowpic"
+                android:id="@+id/ButtonRight"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginRight="16dp"
+                app:layout_constraintLeft_toRightOf="@+id/imageUser"
+                android:layout_marginTop="48dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:onClick="BtnRightClicked"
+                android:background="@android:color/transparent" />
 
-        <FrameLayout
-            android:id="@+id/mapContainer"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            tools:layout_editor_absoluteX="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/emailUser"/>
+            <ImageButton
+                android:layout_width="64dp"
+                android:layout_height="73dp"
+                app:srcCompat="@drawable/arrowpicleft"
+                android:id="@+id/ButtonLeft"
+                android:layout_marginStart="16dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginLeft="16dp"
+                app:layout_constraintRight_toLeftOf="@+id/imageUser"
+                app:layout_constraintHorizontal_bias="1.0"
+                android:layout_marginTop="48dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:onClick="BtnLeftClicked"
+                android:background="@android:color/transparent" />
+    -->
+            <TextView
+                android:layout_width="296dp"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/nameUser"
+                android:textAlignment="center"
+                android:background="@color/com_facebook_button_background_color_pressed"
+                android:padding="10dp"
+                android:textSize="24sp"
+                android:textStyle="normal|bold"
+                android:textColor="@color/cast_expanded_controller_text_color"
+                app:layout_constraintTop_toTopOf="@+id/textView4"
+                android:layout_marginStart="1dp"
+                app:layout_constraintLeft_toRightOf="@+id/textView4"
+                android:layout_marginLeft="1dp" />
 
-        <TextView
-            android:layout_width="363dp"
-            android:layout_height="64dp"
-            android:ems="10"
-            android:id="@+id/noticeText"
-            android:textAlignment="center"
-            android:textSize="14sp"
-            android:background="@color/com_facebook_button_background_color_focused"
-            app:layout_constraintLeft_toLeftOf="@+id/FBUser"
-            app:layout_constraintRight_toRightOf="@+id/FBUser"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/FBUser"
-            app:layout_constraintHorizontal_bias="0.0" />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:id="@+id/emailUser"
+                android:textAlignment="center"
+                app:layout_constraintTop_toBottomOf="@+id/nameUser"
+                app:layout_constraintLeft_toLeftOf="@+id/nameUser"
+                android:padding="5dp"
+                android:background="@color/com_facebook_button_background_color_disabled"
+                app:layout_constraintRight_toRightOf="@+id/nameUser"
+                android:textSize="18sp"
+                app:layout_constraintHorizontal_bias="1.0"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="1dp"
+                android:layout_marginLeft="1dp"
+                android:elevation="1dp" />
 
-        <fragment
-            android:id="@+id/map"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
-            android:layout_width="363dp"
-            android:layout_height="138dp"
-            tools:context="com.siriporn.dogfindertest.MapsActivity"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/noticeText" />
+            <TextView
+                android:text="Noticeable"
+                android:id="@+id/FBUser"
+                android:background="@color/com_facebook_button_background_color_focused_disabled"
+                android:gravity="center_vertical|center_horizontal"
+                android:textColor="@color/cast_expanded_controller_background_color"
+                app:layout_constraintRight_toRightOf="@+id/textView5"
+                app:layout_constraintLeft_toLeftOf="@+id/textView5"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintTop_toTopOf="@+id/noticeText"
+                app:layout_constraintBottom_toBottomOf="@+id/noticeText"
+                android:layout_height="0dp"
+                android:textSize="14sp"
+                app:layout_constraintVertical_bias="0.0"
+                android:layout_width="90dp" />
 
-    </android.support.constraint.ConstraintLayout>
+            <FrameLayout
+                android:id="@+id/mapContainer"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                tools:layout_editor_absoluteX="56dp"
+                app:layout_constraintTop_toBottomOf="@+id/emailUser"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="36dp"
+                android:ems="10"
+                android:id="@+id/noticeText"
+                android:textAlignment="center"
+                android:textSize="14sp"
+                android:background="@color/com_facebook_button_background_color_focused_disabled"
+                app:layout_constraintLeft_toRightOf="@+id/FBUser"
+                app:layout_constraintRight_toRightOf="@+id/emailUser"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/emailUser"
+                android:layout_marginStart="1dp"
+                android:layout_marginLeft="1dp" />
+
+            <fragment
+                android:id="@+id/map"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="0dp"
+                tools:context="com.siriporn.dogfindertest.MapsActivity"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                android:layout_marginTop="24dp"
+                app:layout_constraintTop_toBottomOf="@+id/noticeText"
+                android:layout_height="250dp" />
+
+            <TextView
+                android:text="Name"
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView4"
+                android:textSize="24sp"
+                android:textAlignment="center"
+                android:padding="10dp"
+                android:textColor="@color/cast_expanded_controller_text_color"
+                android:background="@color/com_facebook_button_background_color_pressed"
+                app:layout_constraintLeft_toLeftOf="@+id/imageUser"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/imageUser" />
+
+            <TextView
+                android:text="Breed"
+                android:layout_height="0dp"
+                android:id="@+id/textView5"
+                android:textSize="18sp"
+                android:textColor="@color/cast_expanded_controller_background_color"
+                android:background="@color/com_facebook_button_background_color_disabled"
+                android:textAlignment="center"
+                android:padding="5dp"
+                app:layout_constraintTop_toTopOf="@+id/emailUser"
+                app:layout_constraintBottom_toBottomOf="@+id/emailUser"
+                app:layout_constraintLeft_toLeftOf="@+id/textView4"
+                android:layout_width="90dp" />
+
+        </android.support.constraint.ConstraintLayout>
+    </ScrollView>
 
 </RelativeLayout>
