--- a/app/src/main/res/layout/list_item_lost.xml
+++ b/app/src/main/res/layout/list_item_lost.xml
@@ -46,48 +46,49 @@
         <TextView
             android:id="@+id/nameLostPost"
             android:text="name : (name)"
-            android:layout_width="wrap_content"
+            android:layout_width="337dp"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:layout_marginStart="40dp"
-            app:layout_constraintLeft_toRightOf="@+id/textView8"
-            android:layout_marginLeft="40dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/lostUserPicWritePost" />
+            app:layout_constraintTop_toBottomOf="@+id/lostUserPicWritePost"
+            app:layout_constraintLeft_toRightOf="@+id/textView8"
+            android:paddingLeft="20dp" />
 
         <ImageView
             android:id="@+id/picLostPost"
-            android:layout_width="0dp"
-            android:layout_height="278dp"
+            android:layout_width="423dp"
+            android:layout_height="266dp"
             app:srcCompat="@color/wallet_bright_foreground_disabled_holo_light"
             android:background="@color/cast_intro_overlay_button_background_color"
             android:scaleType="fitXY"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="@+id/textView11"
-            app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
             app:layout_constraintTop_toBottomOf="@+id/NotePost"
-            android:layout_marginTop="8dp" />
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp" />
 
         <TextView
             android:id="@+id/breedLostPost"
             android:text="breed : (breed)"
-            android:layout_width="wrap_content"
+            android:layout_width="338dp"
             android:layout_height="wrap_content"
             android:textSize="18sp"
             app:layout_constraintTop_toBottomOf="@+id/nameLostPost"
-            app:layout_constraintLeft_toLeftOf="@+id/nameLostPost" />
+            app:layout_constraintLeft_toRightOf="@+id/textView10"
+            android:paddingLeft="20dp" />
 
         <TextView
             android:id="@+id/noticeDog"
             android:text="noticeable : (notice)"
-            android:layout_width="306dp"
+            android:layout_width="303dp"
             android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="@+id/breedLostPost"
-            app:layout_constraintTop_toBottomOf="@+id/breedLostPost"
             android:textSize="18sp"
-            app:layout_constraintRight_toRightOf="@+id/picLostPost" />
+            android:paddingLeft="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/breedLostPost"
+            app:layout_constraintLeft_toRightOf="@+id/textView11" />
 
         <TextView
             android:text="Name :"
@@ -127,7 +128,7 @@
             android:textSize="18sp"
             app:layout_constraintTop_toBottomOf="@+id/noticeDog"
             app:layout_constraintLeft_toLeftOf="@+id/textView11"
-            android:layout_marginTop="16dp" />
+            android:layout_marginTop="8dp" />
 
     </android.support.constraint.ConstraintLayout>
 
