--- a/app/src/main/res/layout/list_item_mydog.xml
+++ b/app/src/main/res/layout/list_item_mydog.xml
@@ -24,7 +24,7 @@
         android:layout_marginLeft="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginBottom="24dp"
-        android:layout_alignBottom="@+id/textView"
+        android:layout_alignBottom="@+id/breedText"
         android:layout_toRightOf="@+id/imgDogAccount"
         android:layout_toEndOf="@+id/imgDogAccount"
         android:textStyle="normal|bold" />
@@ -33,7 +33,7 @@
         android:text="Thousandway"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView"
+        android:id="@+id/breedText"
         android:textSize="18sp"
         android:layout_marginBottom="23dp"
         android:layout_alignBottom="@+id/imgDogAccount"
