--- a/app/src/main/res/layout/list_item_searchdog.xml
+++ b/app/src/main/res/layout/list_item_searchdog.xml
@@ -9,9 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="17dp"
-        android:layout_marginStart="17dp">
+        android:layout_alignParentStart="true">
 
         <ImageView
             android:id="@+id/foundUserPicPost"
@@ -48,7 +46,7 @@
 
         <ImageView
             android:id="@+id/picFoundPost"
-            android:layout_width="384dp"
+            android:layout_width="0dp"
             android:layout_height="228dp"
             app:srcCompat="@color/wallet_bright_foreground_disabled_holo_light"
             app:layout_constraintTop_toBottomOf="@+id/noticeDog"
@@ -62,7 +60,7 @@
         <TextView
             android:id="@+id/noticeDog"
             android:text="noticeable : (notice)"
-            android:layout_width="381dp"
+            android:layout_width="409dp"
             android:layout_height="28dp"
             app:layout_constraintTop_toBottomOf="@+id/foundUserPicPost"
             android:textSize="18sp"
