Auto load myDog
next, debug getMoreData and cannot sent Pic

--- a/app/src/main/res/layout/layout_mydog.xml
+++ b/app/src/main/res/layout/layout_mydog.xml
@@ -28,7 +28,7 @@
 
         <ListView
             android:layout_width="411dp"
-            android:layout_height="wrap_content"
+            android:layout_height="599dp"
             android:id="@+id/dogListView"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
