--- a/app/src/main/res/layout/list_item_mydog.xml
+++ b/app/src/main/res/layout/list_item_mydog.xml
@@ -27,7 +27,8 @@
         android:layout_alignBottom="@+id/breedText"
         android:layout_toRightOf="@+id/imgDogAccount"
         android:layout_toEndOf="@+id/imgDogAccount"
-        android:textStyle="normal|bold" />
+        android:textStyle="normal|bold"
+        android:textColor="@color/font" />
 
     <TextView
         android:text="Thousandway"
@@ -38,6 +39,7 @@
         android:layout_marginBottom="23dp"
         android:layout_alignBottom="@+id/imgDogAccount"
         android:layout_alignLeft="@+id/nameDogAccount"
-        android:layout_alignStart="@+id/nameDogAccount" />
+        android:layout_alignStart="@+id/nameDogAccount"
+        android:textColor="@color/font" />
 
 </RelativeLayout>
