--- a/app/src/main/res/layout/content_user_detail.xml
+++ b/app/src/main/res/layout/content_user_detail.xml
@@ -20,8 +20,8 @@
         android:layout_alignParentStart="true">
 
         <ImageView
-            android:layout_width="185dp"
-            android:layout_height="148dp"
+            android:layout_width="319dp"
+            android:layout_height="231dp"
             app:srcCompat="@drawable/camera2"
             android:id="@+id/imageUser"
             android:layout_marginTop="16dp"
@@ -31,8 +31,7 @@
             android:layout_marginRight="16dp"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp"
-            app:layout_constraintHorizontal_bias="0.52" />
+            android:layout_marginLeft="16dp" />
 
         <TextView
             android:layout_width="0dp"
@@ -60,8 +59,8 @@
 
 
         <TextView
-            android:layout_width="280dp"
-            android:layout_height="37dp"
+            android:layout_width="315dp"
+            android:layout_height="38dp"
             android:ems="10"
             android:id="@+id/email_user"
             android:textAlignment="center"
@@ -74,21 +73,7 @@
             android:textSize="16sp" />
 
         <TextView
-            android:layout_width="280dp"
-            android:layout_height="37dp"
-            android:ems="10"
-            android:id="@+id/birth_user"
-            android:textAlignment="center"
-            app:layout_constraintLeft_toLeftOf="@+id/nameUser"
-            android:padding="5dp"
-            android:background="@color/com_facebook_button_background_color_disabled"
-            app:layout_constraintRight_toRightOf="@+id/nameUser"
-            android:textSize="16sp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/phone_user" />
-
-        <TextView
-            android:layout_width="280dp"
+            android:layout_width="317dp"
             android:layout_height="37dp"
             android:ems="10"
             android:id="@+id/phone_user"
@@ -101,21 +86,7 @@
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/email_user" />
 
-        <TextView
-            android:layout_width="280dp"
-            android:layout_height="37dp"
-            android:ems="10"
-            android:id="@+id/lastLogin_user"
-            android:textAlignment="center"
-            app:layout_constraintTop_toBottomOf="@+id/birth_user"
-            app:layout_constraintLeft_toLeftOf="@+id/nameUser"
-            android:padding="5dp"
-            android:background="@color/com_facebook_button_background_color_disabled"
-            android:layout_marginTop="8dp"
-            app:layout_constraintRight_toRightOf="@+id/nameUser"
-            android:textSize="16sp" />
-
-<!--        <TextView
+        <!--        <TextView
             android:text="Facebook"
             android:layout_height="52dp"
             android:id="@+id/FBUser"
