--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,8 +7,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
-        android:layout_width="250dp"
-        android:layout_height="72dp"
+        android:layout_width="251dp"
+        android:layout_height="136dp"
         android:id="@+id/text_details"
         android:textSize="35sp"
         android:textAlignment="center"
@@ -33,11 +33,9 @@
         android:layout_marginBottom="32dp"
         android:layout_height="32dp"
         android:layout_width="276dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.63"
         android:textSize="18sp"
-        android:ellipsize="none" />
+        android:ellipsize="none"
+        app:layout_constraintTop_toBottomOf="@+id/text_details" />
 
 
     <ImageView
@@ -51,7 +49,7 @@
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="56dp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
